[gd_scene load_steps=4 format=2]

[ext_resource path="res://scenes/levels/teleport_test.tscn" type="PackedScene" id=1]
[ext_resource path="res://scripts/teleport_test_master_v2.gd" type="Script" id=2]
[ext_resource path="res://scenes/player/Player.tscn" type="PackedScene" id=3]

[node name="Level" index="0" instance=ExtResource( 1 )]

script = ExtResource( 2 )

[node name="TileMap" parent="." index="0"]

tile_data = PoolIntArray( 0, 0, 0, 1, 0, 0, 2, 0, 0, 3, 0, 0, 4, 0, 0, 5, 0, 0, 6, 0, 0, 7, 0, 0, 8, 0, 0, 9, 0, 0, 10, 0, 0, 11, 0, 0, 12, 0, 0, 13, 0, 0, 14, 0, 0, 15, 0, 0, 16, 0, 0, 17, 0, 0, 18, 0, 0, 19, 0, 0, 20, 0, 0, 21, 0, 0, 22, 0, 0, 23, 0, 0, 24, 0, 0, 25, 0, 0, 65536, 0, 0, 65551, 0, 0, 65561, 0, 0, 131072, 0, 0, 131087, 0, 0, 131097, 0, 0, 196608, 0, 0, 196609, 0, 0, 196619, 0, 0, 196633, 0, 0, 262144, 0, 0, 262155, 0, 0, 262169, 0, 0, 262206, 0, 0, 327680, 0, 0, 327689, 0, 0, 327691, 0, 0, 327692, 0, 0, 327705, 0, 0, 393216, 0, 0, 393222, 0, 0, 393227, 0, 0, 393241, 0, 0, 458752, 0, 0, 458763, 0, 0, 458767, 0, 0, 458777, 0, 0, 524288, 0, 0, 524289, 0, 0, 524290, 0, 0, 524291, 0, 0, 524292, 0, 0, 524293, 0, 0, 524294, 0, 0, 524295, 0, 0, 524296, 0, 0, 524297, 0, 0, 524298, 0, 0, 524299, 0, 0, 524300, 0, 0, 524301, 0, 0, 524302, 0, 0, 524303, 0, 0, 524304, 0, 0, 524305, 0, 0, 524306, 0, 0, 524307, 0, 0, 524308, 0, 0, 524309, 0, 0, 524310, 0, 0, 524311, 0, 0, 524312, 0, 0, 524313, 0, 0 )

[node name="Player" parent="." index="2" instance=ExtResource( 3 )]

position = Vector2( 308, 561 )

[connection signal="body_entered" from="Teleport" to="." method="_on_Teleport_body_entered"]

[connection signal="body_exited" from="Teleport" to="." method="_on_Teleport_body_exited"]

[connection signal="action_pressed" from="Player" to="." method="_on_Player_action_pressed"]


